--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,15 @@
 # Images
-*.png
-*.jpeg
-*.jpg
-*.tif
-*.obj
-*.mtl
-*.bin
-*.hex
+*.png binary
+*.jpeg binary
+*.jpg binary
+*.tif binary
+*.obj binary
+*.mtl binary
+*.bin binary
+*.hex binary
 
-*.dae
+# CVXGEN
+gnc/sub8_controller/include/sub8_trajectory/cvxgen/ldl.c binary
+gnc/sub8_controller/include/sub8_trajectory/cvxgen/matrix_support.c binary
+gnc/sub8_controller/include/sub8_trajectory/cvxgen/csolve.c binary
+*.dae binary
