CVX: Add back as binary

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,7 +9,5 @@
 *.hex binary
 
 # CVXGEN
-gnc/sub8_controller/include/sub8_trajectory/cvxgen/ldl.c binary
-gnc/sub8_controller/include/sub8_trajectory/cvxgen/matrix_support.c binary
-gnc/sub8_controller/include/sub8_trajectory/cvxgen/csolve.c binary
+gnc/sub8_controller/include/sub8_cvx/* binary
 *.dae binary
